Use Integer.valueOf or .parseInt
Similar to Long, using the Integer(String) or Integer(int) constructor
for conversion to Integer is deprecated.